deployments4jenkins/countries/country-apiserver-exposeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: country-api-server-exposeservice
  namespace: lunatech
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: country-apiserver
  sessionAffinity: None
  type: NodePort
