deployments4jenkins/countries/country-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: countries-ingress
  namespace: lunatech
spec:
  rules:
  - http:
      paths:
      - path: /countries
        backend:
          serviceName: country-api-server-exposeservice
          servicePort: 8080
